--- a/30 Paskaita - 10.13/main.css
+++ b/30 Paskaita - 10.13/main.css
@@ -1,4 +1,5 @@
 .bandymas {
+    margin-top: 30px;
     font-size: 20px;
     color: blueviolet;
 }
@@ -20,13 +21,68 @@
 
 table {
     border: 1px solid black;
-    width: 100%;
     height: auto;
     border-collapse: collapse;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 th, td {
     border: 1px solid black;
+    padding: 10px;
+}
+
+
+#name > form {
+    margin: 20px 0 0 0;
+}
+
+#assignment2 > form {
+    border: 2px solid black;
+    padding: 20px;
+    width: fit-content;
+    border-radius: 3px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#assignment2 > form > div {
     padding: 5px;
 }
+
+#assignment2 > form > div > input{
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.kortele {
+    box-sizing: border-box;
+    width: 500px;
+    height: auto;
+    /* border: 2px solid black; */
+    padding: 10px;
+    background-color: #000000;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    border-radius: 3px;
+}
+
+.kortele > img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border: 1px solid white;
+    border-radius: 3px;
+}
+
+.kortele > h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    color: white;
+}
+
+.kortele > p {
+    color: white;
+}
+
+
