--- a/33 Paskaita - 10.19/main.css
+++ b/33 Paskaita - 10.19/main.css
@@ -73,7 +73,12 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 300px;
+    width: 250px;
+}
+
+#realEstate > form {
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 #home {
