--- a/32 Paskaita - 10.18/main.css
+++ b/32 Paskaita - 10.18/main.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 #tasks {
     display: flex;
     align-items: center;
@@ -10,6 +12,10 @@ input:first-of-type {
     padding: 10px 40px 8px 10px;
 }
 
+input:first-of-type:hover {
+    border: 1px solid green;
+}
+
 input:last-of-type {
     border: none;
     padding: 9px 20px;
@@ -19,9 +25,14 @@ input:last-of-type {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+input:last-of-type:hover {
+    background-color: rgb(5, 102, 5);
+}
+
 .task {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 20px;
     padding-left: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -29,7 +40,11 @@ input:last-of-type {
     border-radius: 3px;
 }
 
-.task > button {
+.task:hover {
+    border: 2px solid green;
+}
+
+/* .task > button {
     margin: 20px;
     border: 1px solid rgb(255, 0, 0);
     background-color: red;
@@ -37,8 +52,15 @@ input:last-of-type {
     color: white;
     font-weight: 600;
     padding: 5px 10px;
+} */
+
+.task > i {
+    color: rgb(253, 112, 112);
+    padding: 10px;
 }
 
-
+.task > i:hover {
+    color: rgb(255, 8, 8);
+}
 
 
